{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 25,
  "lineage": "279ad08f-2703-eb29-860e-a8eacf066c21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e20089895a4149b8",
            "association_id": "eipassoc-0b72ec3c1991ce0b6",
            "domain": "vpc",
            "id": "eipalloc-0e20089895a4149b8",
            "instance": "i-0dde8e15a8e8968bc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03a11b1a81b8672f5",
            "private_dns": "ip-10-20-1-180.ec2.internal",
            "private_ip": "10.20.1.180",
            "public_dns": "ec2-18-210-109-138.compute-1.amazonaws.com",
            "public_ip": "18.210.109.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_instance.web_instance",
            "aws_security_group.web_sg",
            "aws_subnet.this_public",
            "aws_vpc.this",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889a44b331db0194",
            "arn": "arn:aws:ec2:us-east-1:108863513136:instance/i-0dde8e15a8e8968bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "davila-drift-testing-ec2-instance-profile",
            "id": "i-0dde8e15a8e8968bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-default",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a11b1a81b8672f5",
            "private_dns": "ip-10-20-1-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.180",
            "public_ip": "18.210.109.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f533c4aae9610f39",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062d65fc3949b38d3",
            "tags": {
              "Name": "davila-drift-testing-ec2"
            },
            "tags_all": {
              "Name": "davila-drift-testing-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0837aaf3e0cf918ac"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_security_group.web_sg",
            "aws_subnet.this_public",
            "aws_vpc.this",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108863513136:internet-gateway/igw-0cc90ea6e85672253",
            "id": "igw-0cc90ea6e85672253",
            "owner_id": "108863513136",
            "tags": {
              "Name": "davila-drift-testing-igw"
            },
            "tags_all": {
              "Name": "davila-drift-testing-igw"
            },
            "vpc_id": "vpc-07b49b3c08788ac2e"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108863513136:route-table/rtb-05513d1d372372daf",
            "id": "rtb-05513d1d372372daf",
            "owner_id": "108863513136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc90ea6e85672253",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc90ea6e85672253",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "davila-drift-testing-public-route-table"
            },
            "tags_all": {
              "Name": "davila-drift-testing-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b49b3c08788ac2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f446e38ee0b3445",
            "route_table_id": "rtb-05513d1d372372daf",
            "subnet_id": "subnet-062d65fc3949b38d3"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.this_public",
            "aws_subnet.this_public",
            "aws_vpc.this",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108863513136:security-group/sg-0837aaf3e0cf918ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0837aaf3e0cf918ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.128.160.118/32",
                  "52.8.146.99/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "davila-drift-testing-sg",
            "name_prefix": "",
            "owner_id": "108863513136",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b49b3c08788ac2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108863513136:subnet/subnet-0cdd7727fbadbe975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdd7727fbadbe975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108863513136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "davila-drift-testing-private-subnet"
            },
            "tags_all": {
              "Name": "davila-drift-testing-private-subnet"
            },
            "vpc_id": "vpc-07b49b3c08788ac2e"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108863513136:subnet/subnet-062d65fc3949b38d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062d65fc3949b38d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108863513136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "davila-drift-testing-public-subnet"
            },
            "tags_all": {
              "Name": "davila-drift-testing-public-subnet"
            },
            "vpc_id": "vpc-07b49b3c08788ac2e"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108863513136:vpc/vpc-07b49b3c08788ac2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0bf829ec0048df599",
            "default_route_table_id": "rtb-0d473f2798c1e3d44",
            "default_security_group_id": "sg-0514c34fe8fcddb77",
            "dhcp_options_id": "dopt-01a95cfdbd1c96b4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b49b3c08788ac2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d473f2798c1e3d44",
            "owner_id": "108863513136",
            "tags": {
              "Name": "davila-drift-testing-vpc"
            },
            "tags_all": {
              "Name": "davila-drift-testing-vpc"
            }
          }
        }
      ]
    }
  ]
}